--- a/index (1).html
+++ b/index (1).html
@@ -9,7 +9,7 @@
 		<title>Dimension by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="description"content=เว็บไซต์ส่วนตัว,ออกแบบงาน">
+	<meta name="description"content="เว็บไซต์ส่วนตัว,ออกแบบงาน">
 <meta name="author"content="พิมพ์แพร พึ่งครุธ">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -26,7 +26,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
+								<h1>PRINCESS</h1>
 								<p>ร้านปริ้นเซสอาหารอร่อย</p>
 							</div>
 						</div>
