--- a/index (1).html
+++ b/index (1).html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>ยินดีต้อนรับสู่เว็บไซต์
+		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"content="เว็บไซต์ส่วนตัว,ออกแบบงาน">
@@ -344,7 +345,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up1.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy;ออกแบบโดยพิมพ์แพร พึ่งครุธ</a>.</p>
 					</footer>
 
 			</div>
