--- a/index (1).html
+++ b/index (1).html
@@ -28,7 +28,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>PRINCESS</h1>
-								<p>ร้านปริ้นเซสอาหารอร่อย</p>
+								</p>ปริ้นเซสสสส</p>
 							</div>
 						</div>
 						<nav>
