--- a/index (1).html
+++ b/index (1).html
@@ -6,8 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ยินดีต้อนรับสู่เว็บไซต์
-		</title>
+		<title>ยินดีต้อนรับสู่เว็บไซต์</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"content="เว็บไซต์ส่วนตัว,ออกแบบงาน">
