--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 								<h2 class="major">หมูกระทะคนสวย</h2>
 								<span class="image main"><img src="images/moo kra ta.png" alt="" /></span>
 								<p>งานที่ได้รับหมอบหมาย</p>
+								<p><a href="https://devnetdesign.github.io/webtosite/">ส่งงาน ครั้งที่ 1</a></p>
+                                <p><a href="https://devnetdesign.github.io/webtosite/work02/">ส่งงาน ครั้งที่ 2</a></p>
+                                <p><a href="https://devnetdesign.github.io/webtosite/work03/">ส่งงาน ครั้งที่ 3</a></p>
 							</article>
 
 						<!-- About -->
