--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">หมูกระทะคนสวย</h2>
-								<span class="image main"><img src="images/moo kra ta.png" alt="" /></span>
+								<span class="image main"><img src="images/abcdefg.png" alt="" /></span>
 								<p>งานที่ได้รับหมอบหมาย</p>
 								<p><a href="https://devnetdesign.github.io/webtosite/">ส่งงาน ครั้งที่ 1</a></p>
                                 <p><a href="https://devnetdesign.github.io/webtosite/work02/">ส่งงาน ครั้งที่ 2</a></p>
