--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">หมูกระทะคนสวย</h2>
-								<span class="image main"><img src="images/abcdefg.png" alt="" /></span>
+								<span class="image main"><img src="images/red.png" alt="" /></span>
 								<p>งานที่ได้รับหมอบหมาย</p>
-								<p><a href="https://devnetdesign.github.io/webtosite/">ส่งงาน ครั้งที่ 1</a></p>
-                                <p><a href="https://devnetdesign.github.io/webtosite/work02/">ส่งงาน ครั้งที่ 2</a></p>
-                                <p><a href="https://devnetdesign.github.io/webtosite/work03/">ส่งงาน ครั้งที่ 3</a></p>
+								<p><a href="https://princesskonsuay.github.io/work/">ส่งงาน ครั้งที่ 1</a></p>
+                                <p><a href="https://princesskonsuay.github.io/work/work02/">ส่งงาน ครั้งที่ 2</a></p>
+                                <p><a href="https://princesskonsuay.github.io/work/work03/">ส่งงาน ครั้งที่ 3</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/green.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
